--- a/estilos/mobile-first.css
+++ b/estilos/mobile-first.css
@@ -1,1 +1,11 @@
 @charset "UTF-8";
+
+
+/* Tabela de cores Mobile:
+
+    Roxo azulado: #2C1BDB
+    Roxo Escuro: #3D33B1
+    Azul Meio Escuro: #1A48DB
+    Roxo Escuro azulado: #2A1ADB
+
+*/
