--- a/estilos/mobile-first.css
+++ b/estilos/mobile-first.css
@@ -19,11 +19,13 @@
 /* Corpo principal */
 
 body{
+    backdrop-filter: blur(6px);
     background-image: url(../midias/imagens/teste-fundo-mobile-2.jpg);
+    background-attachment: fixed;
 }
 
 html{
-
+    
 }
 
 header{
@@ -32,19 +34,34 @@ header{
     align-items: center;
 }
 
+
+/* Configuração para tegs globais */
+main > h1, h2{
+    text-align: center;
+}
+/*--------------------------------*/
+
 main#principal{
     background-color: white;
+    width: 90%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 3px;
+    display: grid;
+    justify-content: center;
 }
 
 nav#principal{
     width: 100%;
+    position: sticky;
+    top: 0%;
 }
 
 /* Itens do Nav */
 
 span#menu-mobile{
     display: grid;
-    background-image: linear-gradient(to left,  #2C1BDB, #1A48DB);
+    background-image: linear-gradient(to left,  #2b1bdb5d, #1A48DB5d);
     width: 100%;
     height: 40px;
     align-items: center;
@@ -74,28 +91,58 @@ nav#list > ul#list-options{
 
 nav#list > ul#list-options > li{
     padding: 4px;
+    margin: 3px;
+    width: 200px;
+    border-radius: 5px;
     font-family: Helvetica, sans-serif;
     font-weight: bold;
     color: white;
-}
+    background-image: linear-gradient(to left, #1a47db69, #2A1ADB69);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-/* Itens do Header */
+    /* teste de animação */
 
-header > div#imagem-header{
-    width: 200px;
-    height: 200px;
-    margin: 3px auto;
-    background-image: url(../midias/imagens/teste-mobile-img-logo.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-header > p{
-    color: white;
-    padding: 10px;
-    font-weight: bold;
-    font-size: 2rem;
-    -webkit-text-stroke: 0.6px;
-    -webkit-text-stroke-color: black;
+    animation-name: testeFrame;
+    animation-duration: 1s;
+    animation-delay: 0.2s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
     
+
 }
+
+nav#list > ul#list-options > li > p{
+    text-align: right;
+}
+
+
+
+.icons{
+    width: 30px;
+    height: 30px;
+    display: flex;
+    margin-right: 10px;
+}
+
+#icon-linkedin{
+    height: 25px;
+}
+
+
+/* Animação para li de #list-options, DOM-click */
+
+@keyframes testeFrame {
+    0%{
+        transform: translateY(-700%);
+    }
+
+    100%{
+        transform: translateY(0%);
+    }
+}
+
+/*---------------------------------------------*/
+
+/*--------------------------------------------------------------------*/
