--- a/estilos/desktop.css
+++ b/estilos/desktop.css
@@ -28,7 +28,7 @@ body{
     align-items: center;
     padding: 10px;
     position: absolute;
-    top: 20px;
+    top: 2vh;
     left: 50%;
     transform: translate(-50%, 0%);
     border-radius: 20px;
@@ -42,7 +42,7 @@ body{
     align-items: center;
     padding: 10px;
     position: absolute;
-    top: 20px;
+    top: 2vh;
     left: 50%;
     transform: translate(-50%, 0%);
     border-radius: 20px;
@@ -209,6 +209,7 @@ main{
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: row;
+    height: 70vh;
 
     /* Animação de Entrada */
     animation-name: mainAp;
@@ -296,7 +297,7 @@ main > section > a:hover{
 /* itens do footer */
 footer{
     position: absolute;
-    top: calc(100% - 100px);
+    top: calc(100% - 50px);
     left: 50%;
     transform: translate(-50%);
     width: 400px;
