--- a/estilos/mobile-first.css
+++ b/estilos/mobile-first.css
@@ -59,28 +59,13 @@ span#menu-mobile > div.line{
     border-radius: 3px;
 }
 
-.listClassOff{
+nav#list > ul#list-options{
     display: grid;
     align-items: center;
     justify-content: center;
-    padding:10px;
-    position: absolute;
-    left: 50%;
-    top: calc(-223px);
-    transform: translate(-50%);
+    
 }
 
-.listClassOn{
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    padding:10px;
-    position: absolute;
-    left: 50%;
-    top: calc(40px);
-    transform: translate(-50%);
-
-}
 
 nav#list > ul#list-options > li.button{
     padding: 4px;
@@ -109,23 +94,6 @@ nav#list > ul#list-options > li.button{
     
 }
 
-<<<<<<< HEAD
-/* Animação para li de #list-options, DOM-click Entrada*/
-
-@keyframes listEntrada {
-    0%{
-        transform: translateY(-700%);
-    }
-
-    100%{
-        transform: translateY(0%);
-    }
-}
-
-/*---------------------------------------------*/
-
-=======
->>>>>>> parent of 6939104 (JS 1..3.2)
 nav#list > ul#list-options > li > a{
     text-decoration: none;
     color: white;
